add markdown linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,17 @@ jobs:
         run: |
           clang-tidy -p build src/ogg_demuxer.cpp
 
+  markdown:
+    name: Check markdown
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run markdownlint
+        uses: DavidAnson/markdownlint-cli2-action@v19
+        with:
+          globs: '**/*.md'
+
   build:
     name: Build
     runs-on: ubuntu-latest
