--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,23 +7,17 @@ on:
     branches: [main]
 
 jobs:
-  format:
-    name: Check formatting
+  pre-commit:
+    name: Pre-commit checks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check clang-format
-        uses: jidicula/clang-format-action@v4.13.0
+      - uses: actions/setup-python@v5
         with:
-          clang-format-version: '17'
-          check-path: 'src'
+          python-version: '3.12'
 
-      - name: Check clang-format (headers)
-        uses: jidicula/clang-format-action@v4.13.0
-        with:
-          clang-format-version: '17'
-          check-path: 'include'
+      - uses: pre-commit/action@v3.0.1
 
   lint:
     name: Static analysis
@@ -42,17 +36,6 @@ jobs:
       - name: Run clang-tidy
         run: |
           clang-tidy -p build src/ogg_demuxer.cpp
-
-  markdown:
-    name: Check markdown
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run markdownlint
-        uses: DavidAnson/markdownlint-cli2-action@v19
-        with:
-          globs: '**/*.md'
 
   build:
     name: Build
